assets/css/style.scss
/* ... */
.group-page {
  padding: 50px 0 130px 0;

  background-image: url("../img/meyer-ochs.png"), url("../img/logo_transparent.png");
  background-position: left bottom, right bottom 70px;
  background-repeat: no-repeat, no-repeat;

  @media screen and (max-width: 1300px) {
    background-image: url("../img/meyer-ochs.png");
  }
  @media screen and (max-width: 800px) {
    background-size: 700px 700px;
  }

  h1, h2 {
    @include mainH;
  }

  .promo {
    display: flex;
    flex-direction: row;
    align-items: center;
    width: 100%;
    height: 600px;
    gap: 24px;

    @media screen and (max-width: 1200px) {
      height: 500px;
    }
    @media screen and (max-width: 990px) {
      flex-direction: column;
      height: auto;
    }

    .left {
      border-radius: 10px;
      flex-shrink: 0;
      width: 500px;
      height: 100%;
      padding: 10px 40px;
      @include light-grey-back;
      color: $grey;
      font-size: 20px;
      line-height: 24px;
      font-family: "Centure Gothic";

      @media screen and (max-width: 1200px) {
        width: 400px;
      }
      @media screen and (max-width: 990px) {
        width: 100%;
        padding: 10px 20px;

      }
    }

    .right {
      border-radius: 10px;
      width: 100%;
      height: 100%;
      background-position: center;
      background-size: cover;
      @media screen and (max-width: 990px) {
        height: 300px;
      }

    }
  }

  .description {
    max-width: 1000px;
    color: $grey;
    font-size: 20px;
    line-height: 24px;
    font-family: "Centure Gothic";
  }

  .divider {
    margin: 50px 0;
  }

  .schedule {
    display: flex;
    flex-direction: column;
    gap: 30px;
    width: 100%;
    max-width: 750px;

    table {
      border-collapse: collapse;
      font-family: 'Centure Gothic';
      line-height: 18px;

      td {
        border: 3px solid $grey;
        padding: 10px;
        font-size: 20px;
        @media screen and (max-width: 760px) {
          padding: 5px;
          font-size: 16px;
        }

        &.day {
          width: 130px;
          font-size: 24px;
          text-align: center;
          @media screen and (max-width: 760px) {
            font-size: 20px;
          }
        }

        &.time {
          font-size: 24px;
          text-align: center;
          width: 160px;
          padding: 10px 0;
          @media screen and (max-width: 760px) {
            font-size: 20px;
          }
        }

        &.master {
          width: 180px;
          padding-right: 20px;
          @media screen and (max-width: 760px) {
            padding-right: 5px;
          }
        }
      }
    }
  }
}

.aboutGuild-page {
  h1 {
    @include mainH;
    margin: 50px 0;
  }

  .row {
    gap: 22px;
    height: 100%;
    flex-wrap: nowrap;

    @media screen and (max-width: 1200px) {
      flex-direction: column;
      flex-wrap: wrap;
    }

    .left, .right {
      display: flex;
      border-radius: 10px;
      height: 740px;
      box-shadow: $shadow;
    }

    .left {
      @include light-grey-back;
      color: $grey;
      font-family: 'Centure Gothic';
      font-size: 20px;
      line-height: 26px;
      padding: 30px;
      text-align: center;
      gap: 24px;

      p {
        margin: 0;
      }

      @media screen and (max-width: 1400px) {
        padding: 20px;
      }

      @media screen and (max-width: 1200px) {
        height: auto;
        padding: 10px;
        gap: 8px;
      }
      @media screen and (max-width: 600px) {
        font-size: 16px;

        .logo {
          width: 110px;
          height: 160px;
        }
        .logo-text {
          width: 270px;
          height: 46px;
        }
      }
    }

    .right {
      background-position: top;
      background-size: cover;
      border-radius: 12px;

      @media screen and (max-width: 1200px) {
        height: 400px;
      }
    }
  }

  .controls {
    position: absolute;
    z-index: 2;
    display: flex;
    width: 100%;
    height: 100%;
    top: 0;
    padding: 0 10px;
  }

  .photos {
    img {
      border-radius: 10px;
      margin: 0 5px;
      height: 450px;

      @media screen and (max-width: 750px) {
        height: 350px;
      }
    }
  }

  .text {
    max-width: 1000px;
    font-family: 'Centure Gothic';
    font-size: 20px;
    line-height: 26px;
    color: $grey;
    text-align: center;

    @media screen and (max-width: 600px) {
      font-size: 16px;
    }
  }
}
/* ... */

